# fabric

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  fabric-provision.spec  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: ARCHITECTURE.md  GOVERNANCE.md  README.md  architecture.md  get-started.md  governance.md  inventory.md  permissions.md  repository.md  usage.md
plan/: README.md
src/fabric_provisioner/: __init__.py  api.py  audit.py  auth.py  cli.py  config.py  connections.py  fabric_client.py  graph_client.py  models.py  ports.py  service.py
src/fabric_provisioner/inventory/: __init__.py  admin_collect.py  core_collect.py  output.py  schema.py
tests/: test_connections.py  test_fabric_client.py  test_inventory_core.py  test_models.py  test_service.py
