[project]
name = "fabric-provisioner"
version = "0.1.0"
description = "Fabric workspace + shareable SQL connection provisioning (Core REST), audit, webhook hooks."
authors = [{ name = "Calvin Cheng" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2",
    "rich>=13",
    "typer>=0.12",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
fabric-provision = "fabric_provisioner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fabric_provisioner"]

[tool.hatch.build.targets.sdist]
include = ["src/fabric_provisioner", "README.md", "LICENSE", "docs", "mkdocs.yml"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.8",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
